# SlicerKonfAI

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
KonfAI/: CMakeLists.txt  KonfAI.py
KonfAI/KonfAILib/: __init__.py  platform_utils.py
KonfAI/KonfAILib/logic/: dependencies.py  hf.py  mrml.py  process.py  servers.py
KonfAI/KonfAILib/widgets/: __init__.py  app_template.py  chip_selector.py  core_widget.py  helpers.py  io_selectors.py  metrics_panel.py
KonfAI/KonfAILib/widgets/dialogs/: download_files.py  remote_server.py
KonfAI/KonfAILib/widgets/panels/: base.py  inference.py  qa.py  selection.py
KonfAI/Resources/UI/: KonfAIAppInference.ui  KonfAIAppQA.ui  KonfAIAppSelection.ui  KonfAIAppTemplate.ui  KonfAICore.ui  KonfAIMetricsPanel.ui
KonfAI/Testing/Python/: CMakeLists.txt  KonfAIApiContractTest.py
